# ------------------------------------------------------------------------------
#  ChangeLog
#  This file is part of Unifix BWidget Toolkit
#  $Id: ChangeLog,v 1.219 2010/11/09 16:04:45 oehhar Exp $
# ------------------------------------------------------------------------------

2010-11-09 Harald Oehlmann <oehhar@users.sourceforge.net>

	* mainframe.tcl Menu text shows white on white on Mac aqua
	[Bug 3105665] reported by Scott Smedley fixed by Kevin Walzer.

2010-05-31 Harald Oehlmann <oehhar@users.sourceforge.net>

	* listbox.html Reflected patch 2010-05-12 in documentation.
	The selection may not be disabled any more by binding button 1.

2010-05-12 Harald Oehlmann <oehhar@users.sourceforge.net>

	* listbox.tcl(ListBox::bindText and ListBox::bindImage)
	Method bindText and bindImage overwrote internal selection
	bindings [Bug 3000293] reported by Robert Karen.

2010-05-11 Harald Oehlmann <oehhar@users.sourceforge.net>

	* listbox.tcl(ListBox::see) Method see shifts image out of
	view. Showed up, by a selection click on a long item with icon
	[Bug 2999764] reported by Robert Karen.

2010-05-05 Harald Oehlmann <oehhar@users.sourceforge.net>

	* listbox.tcl(ListBox::_configureSelectmode) Drag modifies
	multiple selection [Bug 2995969] reported by Robert Karen.
	Bound events on ButtonRelease-1 instead Button-1 for multiple
	selections to avoid bug.
	* listbox.tcl(ListBox::_drag_and_drop) The default drag and drop
	routine only handled single drag and drop.
	It was extended to handle also drag and drop of multiple entries.

2009-09-11 Johann Oberdorfer  <oberdorfer@users.sourceforge.net>

        * button.tcl, "BWSlim.Toolbutton" style related change to ensure that
	  a button created with "-style BWSlim.Toolbutton" keeps it's layout	  

2009-09-10 Johann Oberdorfer  <oberdorfer@users.sourceforge.net>

        * combobox hottrack motion bug fixed:
          "after idle" should fix the problem with very long listbox text items